@@ -189,9 +189,9 @@ class nggdb {
 		global $wpdb;
 		
 		// Query database
-		if ( is_numeric($id) ) {
+		if ( is_numeric($id) && $id != 0 ) {
 			$album = $wpdb->get_row( $wpdb->prepare( "SELECT * FROM $wpdb->nggalbum WHERE id = %d", $id) );
-		} elseif ( $id == 'all' || $id == 0) {
+		} elseif ( $id == 'all' || $id == 0 ) {
 			// init the object and fill it
 			$album = new stdClass();
 			$album->id = 0;
